--- a/Frontend/src/NavBar.css
+++ b/Frontend/src/NavBar.css
@@ -1,8 +1,3 @@
-:root{
-    --orange-color:#FDA085;
-    --yellow-color:#F6D365;
-    --text-color:#525252;
-}
 .nav, .footer {
     font-family: 'Lato',sans-serif;
     font-weight: 900;
@@ -11,10 +6,8 @@
 
 }
 .nav {
-    width: 100%;
     height: 2rem;
     display: flex;
-    row-gap: 4%;
     align-items:center;
     gap: 5%;
     padding: 1rem 1rem 1rem 1rem;
@@ -42,7 +35,6 @@
     -moz-text-fill-color: transparent;
 }
  .footer {
-    width: 100%;
     height: 3rem;
     background-color: var(--primary-color);
     padding: 14px 16px;
